plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '8.3.5'
    id "io.ebean" version "15.8.0"
}

repositories {
    maven { url "https://reposilite.appleptr16.com/appleptr16" }
    mavenCentral()
}
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

project.group groupValue
project.version versionValue

configurations {
    configureEach {
        resolutionStrategy.cacheDynamicVersionsFor 1, 'seconds'
        resolutionStrategy.cacheChangingModulesFor 1, 'seconds'
    }
}

project.ext.ebean_version = '13.14.1'
// https://search.maven.org/search?q=g:io.ebean
dependencies {
    // sql
    annotationProcessor "io.ebean:ebean-querybean:${ebean_version}"
    annotationProcessor "io.ebean:querybean-generator:${ebean_version}"
    implementation "io.ebean:ebean-querybean:${ebean_version}"
    implementation "io.ebean:ebean-postgres:${ebean_version}"
    // sql driver
    implementation 'org.postgresql:postgresql:42.7.4'

    // migration
    implementation "io.ebean:ebean-ddl-generator:${ebean_version}"
    implementation 'io.ebean:ebean-migration:13.7.0'
    testImplementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"

    //json
    implementation "io.ebean:ebean-jackson-mapper:${ebean_version}"
    implementation "io.ebean:ebean-jackson-jsonnode:${ebean_version}"
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'

    // logging
    implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.24.1'

    // http
    implementation 'io.javalin:javalin:6.3.0'
    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.14'
    // validation
    implementation 'am.ik.yavi:yavi:0.12.1'
    // security
    implementation 'com.password4j:password4j:1.7.0'

    // apple
    implementation 'apple.utilities:AppleUtilities:1.4-SNAPSHOT'
    implementation 'apple.lib:applemodules:2.0-SNAPSHOT'
    implementation 'discord.util:discorddcf:1.0-SNAPSHOT'

    // google's guava
    implementation 'com.google.guava:guava:32.1.3-jre'
    // used for string comparison
    implementation 'org.apache.commons:commons-text:1.10.0'

    // discord
    implementation 'net.dv8tion:JDA:5.1.2'
}
ebean {
    debugLevel = 0 //0 - 9
}

mainClassName = 'apple.discord.clover.CloverBot'
shadowJar {
    manifest {
        attributes 'Multi-Release': true
    }
    doLast {
        copy {
            from getArchiveFile()
            into file(botsBuildDir + "/clover")
        }
    }
}